--- a/index.html
+++ b/index.html
@@ -556,6 +556,7 @@
             </div>
         </div>
     </div>
+    <!-- footer ends -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
@@ -600,7 +601,7 @@
 
         });
 
-        //owl-carousel
+        //campaign-carousel
         $(document).ready(function () {
             $(".owl-carousel").owlCarousel(
                 {
