--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <!-- header -->
+    <!-- header starts ===========================-->
     <div class="header">
         <nav class="navbar navbar-expand-lg">
             <!-- desktop nav -->
@@ -33,29 +33,29 @@
                             <a class="nav-link" href="#">Home</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#">How it works</a>
+                            <a class="nav-link" href="#how">How it works</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Recent Campaigns</a>
+                            <a class="nav-link" href="#campaign">Recent Campaigns</a>
                         </li>
                     </ul>
                 </div>
-                <a class="navbar-brand" href="#"><img src="images/amzvest_logo_dark.png" class="img-fluid"
+                <a class="navbar-brand" href="#top"><img src="images/amzvest_logo_dark.png" class="img-fluid"
                         alt="logo"></a>
                 <div class="navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Categories</a>
+                            <a class="nav-link" href="#categories">Categories</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Join Us</a>
+                            <a class="nav-link" href="#join">Join Us</a>
                         </li>
                     </ul>
                 </div>
             </div>
             <!-- mobile nav after breakpoint -->
             <div class="container-fluid mobile_nav">
-                <a class="navbar-brand" href="#"><img src="images/amzvest_logo_dark.png" class="img-fluid"
+                <a class="navbar-brand" href="#top"><img src="images/amzvest_logo_dark.png" class="img-fluid"
                         alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -64,29 +64,29 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <!-- <li class="nav-item">
+                            <a class="nav-link" href="#top">Home</a>
+                        </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="#how">How it works</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">How it works</a>
+                            <a class="nav-link" href="#campaign">Recent Campaigns</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Recent Campaigns</a>
+                            <a class="nav-link" href="#categories">Categories</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Categories</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Join Us</a>
+                            <a class="nav-link" href="#join">Join Us</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
-    <!-- header ends -->
+    <!-- header ends  ===========================-->
 
-    <!-- hero starts-->
+    <!-- hero starts  ===========================-->
     <div class="hero">
         <div class="container">
             <div class="row">
@@ -94,7 +94,7 @@
                     <div class="hero_content text-center">
                         <h1>Amzvest</h1>
                         <h3>
-                            BigHearts is the largest global crowdfunding community connecting nonprofits, donors, and
+                            Amzvest is the largest global crowdfunding community connecting nonprofits, donors, and
                             companies in nearly every country.
                         </h3>
                         <div class="hero_button">
@@ -110,7 +110,6 @@
                 </div>
             </div>
         </div>
-
         <!-- Video Modal -->
         <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -121,17 +120,17 @@
                     </div> -->
                     <div class="modal-body">
                         <!-- Embed your video here -->
-                        <iframe width="100%" height="450px" src="https://www.youtube.com/embed/your-video-id"
+                        <iframe src="https://www.youtube.com/embed/your-video-id"
                             title="YouTube video" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- hero ends -->
+    <!-- hero ends  ===========================-->
 
     <!-- how it works starts -->
-    <div class="how cp-60">
+    <div class="how cp-60" id="how">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -175,10 +174,10 @@
             </div>
         </div>
     </div>
-    <!-- how it works ends -->
+    <!-- how it works ends  ===========================-->
 
-    <!-- recent camp start -->
-    <div class="campaign cp-60">
+    <!-- recent camp start  ===========================-->
+    <div class="campaign cp-60" id="campaign">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -241,7 +240,7 @@
         </div>
     </div>
 
-    <div class="cta cp-60">
+    <div class="cta cp-60" id="cta">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -259,10 +258,10 @@
             </div>
         </div>
     </div>
-    <!-- recent camp ends -->
+    <!-- recent camp ends  ===========================-->
 
-    <!-- categories start -->
-    <div class="categories cp-60">
+    <!-- categories start  ===========================-->
+    <div class="categories cp-60" id="categories">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -295,7 +294,7 @@
         </div>
     </div>
 
-    <div class="community cp-60">
+    <div class="community" id="community">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -434,10 +433,10 @@
             </div>
         </div>
     </div>
-    <!-- categories ends -->
+    <!-- categories ends  ===========================-->
 
-    <!-- join us -->
-    <div class="join cp-60">
+    <!-- join us  ===========================-->
+    <div class="join cp-60" id="join">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -451,9 +450,9 @@
             </div>
         </div>
     </div>
-    <!-- join us ends -->
+    <!-- join us ends  ===========================-->
 
-    <!-- footer starts -->
+    <!-- footer starts  ===========================-->
     <div class="footer">
         <div class="container">
             <div class="row">
@@ -556,7 +555,7 @@
             </div>
         </div>
     </div>
-    <!-- footer ends -->
+    <!-- footer ends  ===========================-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
@@ -572,7 +571,6 @@
                     autoplay: true,
                     autoplayTimeout: 5000,
                     smartSpeed: 500,
-                    margin: 20,
                     slideBy: 1,
                     dotsEach: true,
                     nav: false,
