--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="author" content="Amzvest , developed by Omor Faruq" href="https://faruqweb.com/" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Amzvest</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
